<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayActivity">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <include
            layout="@layout/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/border"
            android:padding="4dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/scoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="47dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="47dp"
                android:layout_marginBottom="16dp"
                android:text="@string/gameScore"
                style="@style/GameScore"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="369dp"
            android:layout_height="206dp"
            android:background="@color/cardview_dark_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent">


            <ImageButton
                android:id="@+id/imagePaper"
                style="@style/GameImages"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/paper"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/paper" />

            <ImageButton
                android:id="@+id/imageScissors"
                style="@style/GameImages"
                android:layout_marginStart="34dp"
                android:layout_marginEnd="35dp"
                android:contentDescription="@string/scissors"
                app:layout_constraintEnd_toStartOf="@+id/imageRock"
                app:layout_constraintStart_toEndOf="@+id/imagePaper"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/scissors" />

            <ImageButton
                android:id="@+id/imageRock"
                style="@style/GameImages"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/rock"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/rock" />

            <Button
                android:id="@+id/makeMove"
                android:layout_width="310dp"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:text="@string/makeMove"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageScissors" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/botMoveText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="103dp"
            android:layout_marginEnd="80dp"
            android:text="@string/botMove"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/playerMoveImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginStart="72dp"
            android:layout_marginBottom="344dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/paper" />

        <ImageView
            android:id="@+id/botMoveImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginEnd="72dp"
            android:layout_marginBottom="344dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/paper" />

        <TextView
            android:id="@+id/winnerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="157dp"
            android:layout_marginTop="132dp"
            android:layout_marginEnd="156dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>